--- a/css/style.css
+++ b/css/style.css
@@ -67,20 +67,20 @@
 }
 
 .btn.btn-primary {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    box-shadow: inset 0 0 0 0 #002d8a;
 }
 
 .btn.btn-primary:hover {
     box-shadow: inset 300px 0 0 0 var(--bs-light) !important;
-    color: var(--bs-primary) !important;
+    color: #002d8a !important;
 }
 
 .btn.btn-light {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    box-shadow: inset 0 0 0 0 #002d8a;
 }
 
 .btn.btn-light:hover {
-    box-shadow: inset 300px 0 0 0 var(--bs-primary);
+    box-shadow: inset 300px 0 0 0 #002d8a;
     color: var(--bs-light) !important;
 }
 
@@ -103,7 +103,7 @@
     position: relative;
     display: inline-block;
     text-transform: uppercase;
-    color: var(--bs-primary);
+    color: #002d8a;
 }
 
 .section-title .sub-style::before {
@@ -115,7 +115,7 @@
     transform: translateY(-50%);
     margin-top: 8px;
     margin-left: -100px;
-    border: 1px solid var(--bs-primary) !important;
+    border: 1px solid #e30016 !important;
 }
 
 .section-title .sub-style::after {
@@ -127,14 +127,14 @@
     transform: translateY(-50%);
     margin-bottom: 5px;
     margin-left: -50px;
-    border: 1px solid var(--bs-primary) !important;
+    border: 1px solid #e30016 !important;
 }
 
 .sub-title {
     position: relative;
     display: inline-block;
     text-transform: uppercase;
-    color: var(--bs-primary);
+    color: #002d8a;
 }
 
 .sub-title::before {
@@ -146,7 +146,7 @@
     transform: translateY(-50%);
     margin-top: 8px;
     margin-right: -100px;
-    border: 1px solid var(--bs-primary) !important;
+    border: 1px solid #e30016 !important;
 }
 
 .sub-title::after {
@@ -158,7 +158,7 @@
     transform: translateY(-50%);
     margin-bottom: 8px;
     margin-right: -50px;
-    border: 1px solid var(--bs-primary) !important;
+    border: 1px solid #e30016 !important;
 }
 
 
@@ -169,7 +169,7 @@
 
 .topbar {
     padding: 2px 10px 2px 20px;
-    background: var(--bs-primary) !important;
+    background: #002d8a !important;
 }
 
 .topbar a,
@@ -211,7 +211,7 @@
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-    color: var(--bs-primary) !important;
+    color: #002d8a !important;
 }
 
 .navbar-light .navbar-brand img {
@@ -248,7 +248,7 @@
 }
 
 .dropdown .dropdown-menu a:hover {
-    background: var(--bs-primary);
+    background: #002d8a;
     color: var(--bs-white);
 }
 
@@ -268,8 +268,8 @@
 
     .navbar.navbar-expand-lg .navbar-toggler {
         padding: 10px 20px;
-        border: 1px solid var(--bs-primary);
-        color: var(--bs-primary);
+        border: 1px solid #002d8a;
+        color: #002d8a;
     }
 
     .navbar-light .navbar-collapse {
@@ -311,7 +311,7 @@
         height: 2px;
         bottom: -1px;
         left: 50%;
-        background: var(--bs-primary);
+        background: #002d8a;
         transition: .5s;
     }
 
@@ -338,7 +338,7 @@
     left: 20px;
     transform: translateY(-50%);
     border-radius: 50%;
-    background: var(--bs-primary);
+    background: #002d8a;
     color: var(--bs-white);
     font-size: 30px;
     display: flex;
@@ -355,7 +355,7 @@
     right: 20px;
     transform: translateY(-50%);
     border-radius: 50%;
-    background: var(--bs-primary);
+    background: #002d8a;
     color: var(--bs-white);
     font-size: 30px;
     display: flex;
@@ -372,7 +372,7 @@
 .header-carousel .owl-nav .owl-prev:hover,
 .header-carousel .owl-nav .owl-next:hover {
     box-shadow: inset 150px 0 0 0 var(--bs-light) !important;
-    color: var(--bs-primary) !important;
+    color: #002d8a !important;
 }
 
 @media (max-width: 576px) {
@@ -392,11 +392,10 @@
 .header-carousel .header-carousel-item img {
     position: relative;
     width: 100%;
-    height: 700px;
+    height: 500px;
     margin-top: 95px;
     display: block;
-//     object-fit: cover;
-    object-fit: contain;
+    object-fit: cover;
     transition: 0.5s;
 
 }
@@ -557,7 +556,7 @@
     left: -125px;
     transform: rotate(-90deg);
     background: transparent;
-    color: var(--bs-primary);
+    color: #002d8a;
     font-size: 20px;
     font-weight: 600;
     letter-spacing: 4px;
@@ -569,7 +568,7 @@
 .feature .feature-item {
     position: relative;
     display: flex;
-    border: 1px solid var(--bs-primary);
+    border: 1px solid #002d8a;
     border-radius: 10px;
     background: var(--bs-light);
     transition: 0.5s;
@@ -589,7 +588,7 @@
 
 .feature .feature-item:hover::before {
     width: 100%;
-    background: var(--bs-primary);
+    background: #002d8a;
 }
 
 .feature .feature-item .feature-icon {
@@ -629,12 +628,12 @@
 }
 
 .appointment .appointment-form .btn.btn-primary {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    box-shadow: inset 0 0 0 0 #002d8a;
 }
 
 .appointment .appointment-form .btn.btn-primary:hover {
     box-shadow: inset 600px 0 0 0 var(--bs-light) !important;
-    color: var(--bs-primary) !important;
+    color: #002d8a !important;
 }
 /*** Youtube Video start ***/
 .video {
@@ -667,7 +666,7 @@
     display: block;
     width: 115px;
     height: 115px;
-    background: var(--bs-primary);
+    background: #002d8a;
     border-radius: 50%;
     animation: pulse-border 1500ms ease-out infinite;
     transition: 0.5s;
@@ -809,7 +808,7 @@
 }
 
 .team .team-item .team-content {
-    color: var(--bs-primary);
+    color: #002d8a;
     transition: 0.5s;
 }
 
@@ -823,7 +822,7 @@
 }
 
 .team .team-item:hover .team-content {
-    background: var(--bs-primary);
+    background: #002d8a;
     color: var(--bs-white);
 }
 /*** Team End ***/
@@ -871,7 +870,7 @@
     justify-content: center;
     font-size: 20px;
     background: var(--bs-light);
-    color: var(--bs-primary);
+    color: #002d8a;
     transition: 0.5s;
 }
 
@@ -888,14 +887,14 @@
     justify-content: center;
     font-size: 20px;
     background: var(--bs-light);
-    color: var(--bs-primary);
+    color: #002d8a;
     transition: 0.5s;
 }
 
 
 .testimonial .testimonial-carousel .owl-nav .owl-prev:hover,
 .testimonial .testimonial-carousel .owl-nav .owl-next:hover {
-    box-shadow: inset 100px 0 0 0 var(--bs-primary) !important;
+    box-shadow: inset 100px 0 0 0 #002d8a !important;
     color: var(--bs-white) !important;
 }
 
@@ -983,7 +982,7 @@
     position: relative;
     display: inline-block;
     text-transform: uppercase;
-    color: var(--bs-primary);
+    color: #002d8a;
 }
 
 .testimonial .section-title .sub-style::before {
@@ -1014,7 +1013,7 @@
     position: relative;
     display: inline-block;
     text-transform: uppercase;
-    color: var(--bs-primary);
+    color: #002d8a;
 }
 
 .testimonial .section-title .sub-title::before {
@@ -1077,7 +1076,7 @@
 
 .blog .blog-item .blog-centent {
     background: var(--bs-light);
-    border: 1px solid var(--bs-primary);
+    border: 1px solid #002d8a;
     border-top: 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -1096,11 +1095,11 @@
 
 
 .contact .contact-form .btn.btn-light {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    box-shadow: inset 0 0 0 0 #002d8a;
 }
 
 .contact .contact-form .btn.btn-light:hover {
-    box-shadow: inset 600px 0 0 0 var(--bs-primary) !important;
+    box-shadow: inset 600px 0 0 0 #002d8a !important;
     color: var(--bs-white) !important;
 }
 
@@ -1123,7 +1122,7 @@
     position: relative;
     display: inline-block;
     text-transform: uppercase;
-    color: var(--bs-primary);
+    color: #002d8a;
 }
 
 .contact .section-title .sub-style::before {
@@ -1154,7 +1153,7 @@
     position: relative;
     display: inline-block;
     text-transform: uppercase;
-    color: var(--bs-primary);
+    color: #002d8a;
 }
 
 .contact .section-title .sub-title::before {
@@ -1202,7 +1201,7 @@
 
 .footer .footer-item a:hover {
     letter-spacing: 2px;
-    color: var(--bs-primary);
+    color: #002d8a;
 }
 
 /*** Footer End ***/
