--- a/css/style.css
+++ b/css/style.css
@@ -742,6 +742,36 @@ color:#ffffff;
     }
 }
 
+#textModal {
+    z-index: 99999;
+}
+
+#textModal .modal-dialog {
+    position: relative;
+    max-width: 800px;
+    margin: 60px auto 0 auto;
+}
+
+#textModal .modal-body {
+    position: relative;
+    padding: 0px;
+}
+
+#textModal .close {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    right: 0px;
+    top: -30px;
+    z-index: 999;
+    font-size: 30px;
+    font-weight: normal;
+    color: #ffffff;
+    background: #000000;
+    opacity: 1;
+}
+
+
 #videoModal {
     z-index: 99999;
 }
